# cpp-emscripten-rust

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  libfoo.cpp  shim.cpp  test.js  test.wasm
src/: lib.rs
