[package]
name = "rust-wasm-cpp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { git = "https://github.com/mohe2015/wasm-bindgen", branch = "emscripten-fixes" }
js-sys = { git = "https://github.com/mohe2015/wasm-bindgen", branch = "emscripten-fixes" }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
dwarf-debug-info = true